app/src/db/repositories/setze_audio/snapshots/anki_sentences__db__repositories__setze_audio__setze_audio_test__test_setze_audio_repo__bulk_upsert__[SetzeAudio::bulk_upsert] - insert.snap
---
source: app/src/db/repositories/setze_audio/setze_audio_test.rs
expression: snapshot
---
[
    SnapshotSetzeAudio {
        satz_id: 1,
        audio_name_es: None,
        audio_name_de: Some(
            "audio_de_1",
        ),
        created_at: "<created_at>",
        deleted_at: None,
    },
    SnapshotSetzeAudio {
        satz_id: 2,
        audio_name_es: Some(
            "audio_es_2",
        ),
        audio_name_de: None,
        created_at: "<created_at>",
        deleted_at: None,
    },
    SnapshotSetzeAudio {
        satz_id: 3,
        audio_name_es: Some(
            "audio_es_3",
        ),
        audio_name_de: Some(
            "audio_de_3",
        ),
        created_at: "<created_at>",
        deleted_at: None,
    },
    SnapshotSetzeAudio {
        satz_id: 4,
        audio_name_es: None,
        audio_name_de: None,
        created_at: "<created_at>",
        deleted_at: None,
    },
]
